--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -38,7 +38,7 @@
 
     <app-task-details
         [selected-task]="selectedTask"
-        (contactUpdated) = "getTasks()">
+        (taskUpdated) = "getTasks()">
     
     </app-task-details>
    
